mathes section add

--- a/index.html
+++ b/index.html
@@ -29,8 +29,78 @@
         </nav>
     </header>
 
+    <main>
+        <section class="matches">
+            <div class="match-left">
+                <button class="btn-secondary">upcoming match</button>
+                <button class="btn-secondary">All group</button>
+                <button class="btn-secondary">Blog</button>
+            </div>
+            <div class="match-right">
+                <div class="match-content">
+                    <img src="assets/img/matches/matches_1.jpg" alt="">
+                    <button>Ttransfer</button>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, neque.</p>
+                </div>
+                <div class="match-content">
+                    <img src="assets/img/matches/matches_2.webp" alt="">
+                    <button>Ttransfer</button>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, neque.</p>
+                </div>
+                <div class="match-content">
+                    <img src="assets/img/matches/matches_3.jpg" alt="">
+                    <button>Ttransfer</button>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, neque.</p>
+                </div>
+                <div class="match-content">
+                    <img src="assets/img/matches/matches_4.jpeg" alt="">
+                    <button>Ttransfer</button>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, neque.</p>
+                </div>
+                <div class="match-content">
+                    <img src="assets/img/matches/matches_5.webp" alt="">
+                    <button>Ttransfer</button>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, neque.</p>
+                </div>
+                <div class="match-content">
+                    <img src="assets/img/matches/matches_6.jpg" alt="">
+                    <button>Ttransfer</button>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, neque.</p>
+                </div>
+                <div class="match-content">
+                    <img src="assets/img/matches/matches_1.jpg" alt="">
+                    <button>Ttransfer</button>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, neque.</p>
+                </div>
+                <div class="match-content">
+                    <img src="assets/img/matches/matches_2.webp" alt="">
+                    <button>Ttransfer</button>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, neque.</p>
+                </div>
+                <div class="match-content">
+                    <img src="assets/img/matches/matches_3.jpg" alt="">
+                    <button>Ttransfer</button>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, neque.</p>
+                </div>
+            </div>
 
-    
+        </section>
+    </main>
+
+    <footer class="footer">
+        <h2>Goal</h2>
+        <hr>
+        <div class="footer-links">
+            <ul>
+                <li>Contact us </li>
+                <li>Terms of Service</li>
+                <li>Privacy Policy</li>
+                <li>Privacy settings</li>
+                <li>Goal app</li>
+                <li>Goal live</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
